--- a/auth/package.json
+++ b/auth/package.json
@@ -1,11 +1,10 @@
-
 {
   "name": "ticketing",
   "version": "1.0.0",
   "description": "",
   "main": "index.js",
-  "scripts": {  
-    "start": "ts-node-dev src/index.ts"
+  "scripts": {
+    "start": "ts-node-dev --poll src/index.ts"
   },
   "keywords": [],
   "author": "",
@@ -13,6 +12,7 @@
   "dependencies": {
     "@types/express": "^4.17.12",
     "express": "^4.17.1",
+    "express-validator": "^6.11.1",
     "ts-node-dev": "^1.1.6",
     "typescript": "^4.3.2"
   }
