--- a/auth/package.json
+++ b/auth/package.json
@@ -4,7 +4,15 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "start": "ts-node-dev --poll src/index.ts"
+    "start": "ts-node-dev --poll src/index.ts",
+    "test": "jest --watchAll --no-cache"
+  },
+  "jest": {
+    "preset": "ts-jest",
+    "testEnvironment": "node",
+    "setupFilesAfterEnv": [
+      "./src/test/setup.ts"
+    ]
   },
   "keywords": [],
   "author": "",
@@ -19,8 +27,16 @@
     "express-async-errors": "^3.1.1",
     "express-validator": "^6.11.1",
     "jsonwebtoken": "^8.5.1",
-    "mongoose": "5.10.19",
+    "mongoose": "^5.12.12",
     "ts-node-dev": "^1.1.6",
     "typescript": "^4.3.2"
+  },
+  "devDependencies": {
+    "@types/jest": "^26.0.23",
+    "@types/supertest": "^2.0.11",
+    "jest": "^27.0.1",
+    "mongodb-memory-server": "^6.9.6",
+    "supertest": "^6.1.3",
+    "ts-jest": "^27.0.1"
   }
 }
