--- a/skaffold.yaml
+++ b/skaffold.yaml
@@ -40,3 +40,11 @@ build:
         manual:
           - src: "src/**/*.ts"
             dest: .
+    - image: YOUR_USERNAME/expiration
+      context: expiration
+      docker:
+        dockerfile: Dockerfile
+      sync:
+        manual:
+          - src: "src/**/*.ts"
+            dest: .
