--- a/expiration/package.json
+++ b/expiration/package.json
@@ -21,6 +21,7 @@
     "@adamptickets/common": "^1.0.11",
     "@types/bull": "^3.15.2",
     "bull": "^3.22.11",
+    "node-nats-streaming": "^0.3.2",
     "ts-node-dev": "^1.1.7",
     "typescript": "^4.3.2"
   },
